--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#heroSection {
+  padding-top: 25vh;
+  z-index: 1;
+}
