--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,8 +24,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* NAVBAR */
+
 #linksList{
-  background-color: rgba(255, 255, 255, 0.35);
+  background-color: #dad2d259;
+}
+
+/* SECTIONS */
+
+section#home{
+  background-image: url(@/app/assets/banner_overlay.png);
 }
 
 section[data-bg="light"]{
@@ -35,8 +43,8 @@ section[data-bg="light"] .sectionTitle {
   color: #000000;
 }
 
-section[data-bg="dark"]{
-  background-color: #000000;
+section[data-bg="dark"], footer, .contactCard{
+  background-image: linear-gradient(to bottom, #23272d, #101317);
 }
 section[data-bg="dark"] .sectionTitle {
   color: #ffffff;
